# ExpressionEval

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README  README.md  TODO  configure  configure.ac  configure.sh
doc/: Compilatore.txt  Interprete.txt  Sintassi_espressioni.txt
include/: eil.h  expreval.h  expreval_internal.h  list.h
include/arch/: aarch64.h  x86.h
src/: eval.c  jit_compiler.c  parser.c  tokenizer.c
src/arch/x86/: linux_x86_32.c  linux_x86_64.c
src/include/: expreval.h  expreval_internal.h
src/include/arch/: x86.h
src/lib/: eil.c  eval.c  jit_compiler.c  list.c  parser.c  tokenizer.c
src/lib/arch/aarch64/linux/: linux_aarch64.c
src/lib/arch/i686/: cpuid.asm
src/lib/arch/x86_64/: cpuid.asm
src/lib/arch/x86_64/linux/: linux_x86_64.c
src/lib/arch/x86_64/win/: win64.c
src/test/: performance_test.c  prova.c  test_main.c
test/: performance_test.c  prova.c  test_main.c
